--- a/pages/welcome.yaml
+++ b/pages/welcome.yaml
@@ -14,7 +14,7 @@ areas:
           - id: content
             type: Result
             properties:
-              title: Welcome to your Lowdefy app
+              title: My Own Heading
               subTitle: We are excited to see what you are going to build
               icon:
                 name: HeartTwoTone
